--- a/web/package.json
+++ b/web/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "basic-authentication",
+  "name": "vue-playground-web",
   "version": "1.0.0",
+  "description": "Web container for vue-playground",
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "build": "nuxt-ts build",
+    "start": "nuxt-ts start",
+    "export": "nuxt-ts export",
+    "serve": "nuxt-ts serve",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
-    "cookie-universal-nuxt": "^2.1.5",
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "nuxt-i18n": "^6.28.1",
-    "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0",
+    "@nuxt/typescript-runtime": "^0.4.10",
+    "@nuxtjs/auth-next": "^5.0.0-1602966760.822bc05",
+    "@nuxtjs/axios": "^5.12.2",
+    "cookie-universal-nuxt": "^2.1.4",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
+    "nuxt": "^2.14.7",
+    "nuxt-i18n": "^6.16.0",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0",
+    "typescript": "^4.1.2",
     "vuelidate": "^0.7.6",
     "vuelidate-error-extractor": "^2.4.1",
-    "vuetify": "^2.5.5"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
-    "@nuxt/types": "^2.15.7",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^6.0.1",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/vuetify": "^1.12.1",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
-    "prettier": "^2.3.2"
+    "@nuxt/typescript-build": "^1.0.3",
+    "@nuxtjs/eslint-config": "^3.0.0",
+    "@nuxtjs/eslint-config-typescript": "^2.0.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/vuetify": "^1.11.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "nodemon": "^1.18.9",
+    "prettier": "^2.2.0"
   }
 }
