--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -7,8 +7,7 @@
     "sourceMap": true,
     "watch": true,
     "moduleResolution": "node",
-    "noFallthroughCasesInSwitch": true,
-    "types": ["@nuxt/types", "@types/node"]
+    "noFallthroughCasesInSwitch": true
   },
-  "exclude": ["node_modules", ".nuxt", "dist"]
+  "exclude": ["node_modules"]
 }
