--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-playground-web",
+  "name": "basic-authentication-web",
   "version": "1.0.0",
-  "description": "Web container for vue-playground",
+  "description": "Web container for basic-authentication",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.10",
-    "@nuxtjs/auth-next": "^5.0.0-1602966760.822bc05",
     "@nuxtjs/axios": "^5.12.2",
     "cookie-universal-nuxt": "^2.1.4",
     "cross-env": "^7.0.2",
@@ -26,8 +25,7 @@
     "pug-plain-loader": "^1.0.0",
     "typescript": "^4.1.2",
     "vuelidate": "^0.7.6",
-    "vuelidate-error-extractor": "^2.4.1",
-    "vuex": "^3.5.1"
+    "vuelidate-error-extractor": "^2.4.1"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^1.0.3",
